syntax = "proto3";

package com.example.user.domain;

option java_outer_classname = "UserDomain";

message UserState {
  string user_id = 1;
  string full_name = 2;
  string handle = 3;
  string email =  4;
}

message UserCreated {
  string full_name = 1;
  string handle = 2;
  string email =  3;
}

message HandleChanged {
  string new_handle = 1;
  string old_handle = 2;
}